# TdyFFmpeg

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/tdyffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/jni/: simplest_ffmpeg_decoder.c
app/src/main/cpp/jni/cameraencode/: CMakeLists.txt  encode_jpeg.cpp  encode_jpeg.h  encode_mp4.cpp  encode_mp4.h  encode_video.cpp  native_code.cpp  native_code.h
app/src/main/java/com/example/tdyffmpeg/: MainActivity.java  VideoViewActivity.java
app/src/main/java/com/example/tdyffmpeg/camera/encode/: FFmpegCameraEncodeActivity.java  NativeEncoder.java
app/src/main/java/com/example/tdyffmpeg/camera1/: AutoFitTextureView.java  Camera1Helper.java  CameraListener.java
app/src/main/java/com/example/tdyffmpeg/ffmpeg/: FFmpegActivity.java  FFmpegDecodeActivity.java  FFmpegDecodeOneLibActivity.java  FFmpegEncodeActivity.java  FFmpegHelloworldActivity.java  FFmpegStreamerActivity.java  FFmpegTranscoderActivity.java
app/src/main/java/com/example/tdyffmpeg/javacv/: JavacvActivity.java
app/src/main/java/com/example/tdyffmpeg/javacv/activity/: CameraDemoActivity.java  VideoPlayerActivity.java
app/src/main/java/com/example/tdyffmpeg/javacv/camera/: CameraInstance.java  MyLogUtil.java
app/src/main/java/com/example/tdyffmpeg/javacv/myUtils/: Common.java  FrameBufferObject.java  ImageUtil.java  PermissionUtil.java  ProgramObject.java  TextureDrawer.java  VideoUtil.java
app/src/main/java/com/example/tdyffmpeg/javacv/recorder/: CONSTANTS.java  MyRecorder.java  MyRecorderWrapper.java  RecorderParameters.java  VideoUtil.java
app/src/main/java/com/example/tdyffmpeg/javacv/texUtils/: TextureRenderer.java  TextureRendererBlur.java  TextureRendererDrawOrigin.java  TextureRendererEdge.java  TextureRendererEmboss.java  TextureRendererLerpBlur.java  TextureRendererMask.java  TextureRendererWave.java
app/src/main/java/com/example/tdyffmpeg/javacv/view/: Camera1GLSurfaceView.java  CameraGLSurfaceView.java  VideoPlayerGLSurfaceView.java
app/src/main/java/com/example/tdyffmpeg/sdl/: SDLActivity.java
app/src/main/res/layout/: activity_camera_demo.xml  activity_camera_surface.xml  activity_ffmpeg.xml  activity_ffmpeg_decode.xml  activity_ffmpeg_decode_one_lib.xml  activity_ffmpeg_encode.xml  activity_ffmpeg_helloworld.xml  activity_ffmpeg_streamer.xml  activity_ffmpeg_transcoder.xml  activity_javacv.xml  activity_main.xml  activity_sdlactivity.xml  activity_video_player.xml  activity_video_view.xml
app/src/main/res/menu/: menu_video_player.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/tdyffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
